--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -17,7 +17,7 @@
     <string name="about_rainstorm">Prietrž</string>
     <string name="about_showers">Prehánky</string>
     <string name="about_sleet">Pľušť</string>
-    <string name="about_snow">Snežnie</string>
+    <string name="about_snow">Sneženie</string>
     <string name="about_sunny">Jasno</string>
     <string name="about_sunny_night">Jasná noc</string>
     <string name="about_t_storms">Búrky</string>
