update CZ strings 4.5.0

--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="about_author">Autor</string>
+    <string name="about_blizzard">Blizárd</string>
     <string name="about_cloudy">Zamračeno</string>
     <string name="about_cloudy_night">Zamračená noc</string>
     <string name="about_copyright">Autorská práva</string>
     <string name="about_dust">Prach</string>
     <string name="about_fog">Mlha</string>
     <string name="about_hailstone">Kroupy</string>
+    <string name="about_heavy_snow">Těžký sníh</string> 
     <string name="about_light_rain">Mrholení</string>
+    <string name="about_light_snow">Jemný sníh</string>
     <string name="about_overcast">Zamračeno</string>
     <string name="about_provider">Zdroj předpovědi</string>
     <string name="about_rain">Déšť</string>
     <string name="about_rainstorm">Průtrž</string>
     <string name="about_showers">Přeháňky</string>
     <string name="about_sleet">Plískanice</string>
-    <string name="about_snow">Sníh</string>
+    <string name="about_snow">Sněžení</string>
     <string name="about_sunny">Jasno</string>
     <string name="about_sunny_night">Jasná noc</string>
     <string name="about_t_storms">Bouřky</string>
@@ -101,6 +104,7 @@
     <string name="settings_show_info_title">Ukázat info</string>
     <string name="settings_show_weather_icons_summary">Zobrazit ikony počasí (místo textu) v 3-denní předpovědi</string>
     <string name="settings_show_weather_icons_title">Zobrazit ikonu počasí</string>
+    <string name="settings_time_format_12h">12h formát času</string>
     <string name="settings_update_autoupdate_summary">Automaticky aktualizovat předpověď počasí</string>
     <string name="settings_update_autoupdate_title">Automatická aktualizace</string>
     <string name="settings_update_interval_title">Interval aktualizace</string>
