--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -19,18 +19,18 @@ Supporter son développement avec Flattr ou en envoyant des dons en utilisant l'
 	<string name="changelog">Dernières mises à jour</string>
 	<string name="close">Fermer</string>
 	<string name="donate">Faire un don</string>
-	<string name="settings_check_updates_title">Mises à jour automatiques</string>
+	<string name="settings_check_updates_title">Mise à jour automatique</string>
 	<string name="settings_check_updates_summary">"Vérifier les mises à jour au démarrage de l'application"</string>
 	<string name="settings_category_app_update">"Mise à jour de l'application"</string>
-	<string name="settings_category_forecast_update">Mise à jour des prévisions</string>
+	<string name="settings_category_forecast_update">Mise à jour des prévisions météorologiques</string>
 	<string name="widget_name_medium">Météo 4x1</string>
 	<string name="widget_name_medium_ext">Météo 4x1</string>
 	<string name="widget_name_large">Météo 4x2</string>
 	<string name="widget_name_large_v5">Météo 4x2</string>
 	<string name="about_version">Version</string>
 	<string name="about_author">Auteur</string>
-	<string name="about_provider">Source des données météorologiques</string>
-	<string name="about_copyright">Copyright</string>
+	<string name="about_provider">Source des données météo</string>
+	<string name="about_copyright">Crédits</string>
 	<string name="about_sunny">Ciel dégagé</string>
 	<string name="about_sunny_night">Nuit dégagée</string>
 	<string name="about_cloudy">Ciel couvert</string>
@@ -49,7 +49,7 @@ Supporter son développement avec Flattr ou en envoyant des dons en utilisant l'
 	<string name="about_light_snow">Faibles neiges</string>
 	<string name="about_heavy_snow">Fortes neiges</string>
 	<string name="about_blizzard">Tempête de neige</string>
-	<string name="animation_preview">Prévisualisation des animations</string>
+	<string name="animation_preview">Prévisualisation</string>
 	<string name="menu_update">Mise à jour</string>
 	<string name="menu_settings">Paramètres</string>
 	<string name="menu_locations">Villes</string>
@@ -72,9 +72,9 @@ Supporter son développement avec Flattr ou en envoyant des dons en utilisant l'
 	<string name="weather_forecast_empty">--</string>
 	<string name="weather_cond_overcast">Nuageux</string>
 	<string name="settings_category_update">Mises à jour</string>
-	<string name="settings_category_update_sum">Paramétrage des mises à jour</string>
+	<string name="settings_category_update_sum"></string>
 	<string name="settings_category_animation">Animations</string>
-	<string name="settings_category_animation_sum">Choix des animations</string>
+	<string name="settings_category_animation_sum"></string>
 	<string name="settings_update_interval_title">Fréquence de mise à jour</string>
 	<string name="settings_update_autoupdate_title">Mise à jour automatique</string>
 	<string name="settings_update_autoupdate_summary">Mise à jour automatique des prévisions météorologiques</string>
@@ -82,8 +82,8 @@ Supporter son développement avec Flattr ou en envoyant des dons en utilisant l'
 	<string name="settings_animation_show_summary">Afficher en arrière-plan une animation correspondant à la météo actuelle</string>
 	<string name="settings_animation_download_title">Télécharger des animations</string>
 	<string name="settings_animation_download_summary">Télécharger une animation correspondant à la météo actuelle (si aucun fichier vidéo en local ne correspond)</string>
-	<string name="settings_about_title">A propos de</string>
-	<string name="settings_about_summary">"Informations sur l'application"</string>
+	<string name="settings_about_title">À propos</string>
+	<string name="settings_about_summary"></string>
 	<string name="no_provider">La géolocalisation a échoué
 Veuillez entrer manuellement votre position</string>
 	<string name="network_error">Impossible de se connecter au serveur</string>
@@ -98,34 +98,35 @@ Veuillez entrer manuellement votre position</string>
 	<string name="download_video">Télécharger la vidéo</string>
 	<string name="conf_no_background">Aucun arrière-plan</string>
 	<string name="settings_category_notification">Notifications</string>
-	<string name="settings_category_notification_sum">Paramétrage des notifications météorologiques</string>
+	<string name="settings_category_notification_sum"></string>
 	<string name="settings_category_network">Accès internet</string>
 	<string name="settings_notification_title">Affichage des notifications</string>
 	<string name="settings_notification_summary">Afficher la météo actuelle dans la zone de notifications</string>
-	<string name="settings_update_wifi_only_title">Mise à jour uniquement en Wi-Fi</string>
+	<string name="settings_update_wifi_only_title">Mise à jour en Wi-Fi</string>
 	<string name="settings_update_wifi_only_summary">Mise à jour automatique des prévisions météorologiques seulement si une connexion Wi-Fi est active</string>
 	<string name="settings_update_roaming_title">Mise à jour sur le forfait data</string>
 	<string name="settings_update_roaming_summary">Mise à jour automatique des prévisions météorologiques autorisée sur le forfait data (attention : cela peut engendrer des surfacturations de la part de votre opérateur)</string>
 	<string name="settings_category_appearance">Apparence</string>
-	<string name="settings_category_appearance_sum">Choix des unités et de la couleur du texte</string>
+	<string name="settings_category_appearance_sum"></string>
 	<string name="settings_category_miui">ROMs MIUI</string>
-	<string name="settings_category_miui_sum">Options dédiées aux ROMs MIUI</string>
+	<string name="settings_category_miui_sum"></string>
 	<string name="settings_miui_support_summary">Prise en charge des widgets natifs de MIUI</string>
 	<string name="settings_miui_support_title">Support des widgets MIUI</string>
 	<string name="settings_miui_v5_summary">Désactiver si le système tourne sous la ROM MIUI v5</string>
 	<string name="settings_miui_v5_title">ROM MIUI v5</string>
-	<string name="clear_miui_data">Nettoyer le cache météo de MIUI</string>
+	<string name="clear_miui_data">Vider le cache météo de MIUI</string>
 	<string name="clear_miui_data_summary">"Effacer les données de l'application météo native de MIUI"</string>
 	<string name="clear_miui_data_dialog">Nettoyage du cache météo de MIUI</string>
 	<string name="clear_miui_data_dialog_text">"Les données de l'application météo native de MIUI ont été effacées avec succès !"</string>
+	<string name="settings_time_format_12h">Heure au format 12h</string>
 	<string name="settings_show_weather_icons_title">Affichage des icônes de météo</string>
 	<string name="settings_show_weather_icons_summary">Afficher des icônes dans les prévisions météorologiques à 3 jours</string>
 	<string name="settings_notification_text_color_summary">"Couleur du texte et de l'icône"</string>
-	<string name="settings_notification_color_title">"Couleur du symbole dans la barre d'état"</string>
+	<string name="settings_notification_color_title">"Couleur dans la barre d'état"</string>
 	<string name="settings_category_widgets">Widgets</string>
-	<string name="settings_category_widgets_sum">Apparence des widgets et actions sur clics</string>
+	<string name="settings_category_widgets_sum"></string>
 	<string name="settings_widgets_click_clock_title">"Clic sur l'horloge"</string>
-	<string name="settings_widgets_click_clock_summary">"Application à lancer en cliquant sur l'horloge du widget"</string>
+	<string name="settings_widgets_click_clock_summary">"Application à lancer en cliquant sur l'heure affichée dans le widget"</string>
 	<string name="settings_widgets_click_weather_title">Clic sur la météo</string>
 	<string name="settings_widgets_click_weather_summary">Application à lancer en cliquant sur la zone météo du widget</string>
 	<string name="settings_widgets_widget4x2">Widget 4x2</string>
@@ -153,8 +154,7 @@ Veuillez entrer manuellement votre position</string>
 	<string name="quiet_hours_title">Plages horaires de mise à jour</string>
 	<string name="quiet_hours_enabled">Désactiver les mises à jour</string>
 	<string name="quiet_hours_enabled_on">Mises à jour suspendues sur la plage horaire définie ci-dessous</string>
-	<string name="quiet_hours_enabled_off">"Mises à jour à toute heure de la journée
-(à condition d'avoir un accès internet)"</string>
+	<string name="quiet_hours_enabled_off">"Mises à jour à toute heure de la journée (à condition d'avoir un accès internet)"</string>
 	<string name="start_time_title">Début</string>
 	<string name="end_time_title">Fin</string>
 	<string name="dlg_select_action">Choisir une action</string>
