--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -1,5 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+	<string name="donations_button_close">Bezár</string> 
+	<string name="donations_flattr">Flattr</string> 
+	<string name="donations_description">Hasznosnak találod ezt az alkalmazást?\nTámogathatod a fejlsztést flattring-el vagy küldhetsz támogatást a Google Android Market-et használva!</string> 
+	<string name="donations_flattr_description">A Flattr 10 %-ot levesz havi díjként!</string> 
+	<string name="donations_google_android_market">Google Android Market</string> 
+	<string name="donations_google_android_market_not_supported_title">In-App Donations nem támogatott</string> 
+	<string name="donations_google_android_market_not_supported">Az alkalmazáson belüli adományozás nem támogatott. A Google Android Market megfelelően van telepítve?</string> 
+	<string name="donations_google_android_market_description">A Google része 30 % minden adományból!</string> 
+	<string name="donations_google_android_market_donate_button">Adományozok!</string> 
+	<string name="donations_google_android_market_text">Mennyi?</string> 
+	<string name="donations_paypal">PayPal</string> 
+	<string name="donations_paypal_description">Az adományozott összeget megválaszthatja a gombra való kattintás után.</string> 
+	<string name="donations_thanks_dialog_title">Köszönöm!</string> 
+	<string name="donations_thanks_dialog">Köszönjük a támogatást!\nNagyra értékeljük!</string> 
     <string name="app_name">Időjárás</string>
     <string name="changelog">Változások</string>
     <string name="close">Bezárás</string>
