--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="donations__button_close">Zamknij</string>
-    <string name="donations__flattr">Flattr</string>
-    <string name="donations__description">"Czy uważasz tę aplikację za przydatną?
+    <string name="donations_button_close">Zamknij</string>
+    <string name="donations_flattr">Flattr</string>
+    <string name="donations_description">"Czy uważasz tę aplikację za przydatną?
 Doceń autora pozytywnym komentarzem lub przekazując mu darowiznę!"</string>
-    <string name="donations__flattr_description">Flattr pobiera 10% jako miesięczną opłatę!</string>
-    <string name="donations__google_android_market">Sklep Google Play</string>
-    <string name="donations__google_android_market_not_supported_title">Brak wsparcia dla wbudowanych płatności</string>
-    <string name="donations__google_android_market_not_supported">Brak wsparcia dla wbudowanych płatności. Czy aplikacja Sklep Google Play jest zainstalowana prawidłowo?</string>
-    <string name="donations__google_android_market_description">Google pobiera 30% kwoty z każdej darowizny!</string>
-    <string name="donations__google_android_market_donate_button">Przekaż!</string>
-    <string name="donations__google_android_market_text">Kwota do przekazania?</string>
-    <string name="donations__paypal_description">Wybór kwoty do przekazania nastąpi po kliknięciu przycisku \"Przekaż\"!</string>
-    <string name="donations__thanks_dialog_title">Dzięki!</string>
-    <string name="donations__thanks_dialog">"Dziekuję za darowiznę!
+    <string name="donations_flattr_description">Flattr pobiera 10% jako miesięczną opłatę!</string>
+    <string name="donations_google_android_market">Sklep Google Play</string>
+    <string name="donations_google_android_market_not_supported_title">Brak wsparcia dla wbudowanych płatności</string>
+    <string name="donations_google_android_market_not_supported">Brak wsparcia dla wbudowanych płatności. Czy aplikacja Sklep Google Play jest zainstalowana prawidłowo?</string>
+    <string name="donations_google_android_market_description">Google pobiera 30% kwoty z każdej darowizny!</string>
+    <string name="donations_google_android_market_donate_button">Przekaż!</string>
+    <string name="donations_google_android_market_text">Kwota do przekazania?</string>
+    <string name="donations_paypal_description">Wybór kwoty do przekazania nastąpi po kliknięciu przycisku \"Przekaż\"!</string>
+    <string name="donations_thanks_dialog_title">Dzięki!</string>
+    <string name="donations_thanks_dialog">"Dziekuję za darowiznę!
 Naprawdę to doceniam!"</string>
     <string name="app_name">Pogoda BZ</string>
     <string name="changelog">Zmiany</string>
