--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -1,5 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="donations_button_close">Закрыть</string> 
+  	<string name="donations_flattr">Flattr</string> 
+  	<string name="donations_description">Считаете ли вы приложение полезным?\nПоддержите разработчика через flattr или отправьте пожертвование через Google Play Store!</string> 
+  	<string name="donations_flattr_description">Flattr взимает 10% в виде ежемесячной абонентской платы!</string> 
+  	<string name="donations_google_android_market">Google Play Store</string> 
+  	<string name="donations_google_android_market_not_supported_title">Пожертвования через приложение не поддерживаются</string> 
+  	<string name="donations_google_android_market_not_supported">Пожертвования через приложение не поддерживаются. Google Play Store установлен правильно?</string> 
+  	<string name="donations_google_android_market_description">Google взимает 30% с каждого пожертвования!</string> 
+  	<string name="donations_google_android_market_donate_button">Пожертвовать!</string> 
+  	<string name="donations_google_android_market_text">Сколько?</string> 
+  	<string name="donations_paypal">PayPal</string> 
+  	<string name="donations_paypal_description">После нажатия на кнопку вы можете выбрать сколько хотите пожертвовать!</string> 
+  	<string name="donations_thanks_dialog_title">Благодарю!</string> 
+  	<string name="donations_thanks_dialog">Благодарю за пожертвование! Я очень это ценю!</string> 
     <string name="app_name">Погода BZ</string>
     <string name="changelog">Список изменений</string>
     <string name="close">Закрыть</string>
@@ -69,7 +83,7 @@
     <string name="settings_about_summary">Информация о программе</string>
     <string name="no_provider">Ошибка определения местоположения\nВыберите местоположение вручную</string>
     <string name="network_error">Нет соединения с сервером</string>
-    <string name="updating">Обновление\u2026</string>
+    <string name="updating">Обновление</string>
     <string name="just_now">Только что</string>
     <string name="fetching_location">Определение местоположения\u2026</string>
     <string name="conf_add_widget">Добавить виджет</string>
@@ -81,23 +95,23 @@
     <string name="conf_no_background">Без фона (прозрачный)</string>
     <string name="settings_category_network">Настройки сети</string>
     <string name="settings_category_notification">Уведомления</string>
-    <string name="settings_category_notification_sum">Уведомления о состоянии погоды в статусной строке</string>
+    <string name="settings_category_notification_sum">Состояние погоды в статусной строке</string>
     <string name="settings_notification_title">Уведомление о погоде</string>
-    <string name="settings_notification_summary">Показывать текущие показатели прогноза погоды в области уведомлений</string>
+    <string name="settings_notification_summary">Отображать прогноз погоды в области уведомлений</string>
     <string name="settings_update_wifi_only_title">Обновлять только по Wi-Fi</string>
-    <string name="settings_update_wifi_only_summary">Автоматически обновлять прогноз погоды только при наличии подключения по сети Wi-Fi</string>
+    <string name="settings_update_wifi_only_summary">Обновлять прогноз погоды только при наличии подключения по сети Wi-Fi</string>
     <string name="settings_update_roaming_title">Обновлять в роуминге</string>
-    <string name="settings_update_roaming_summary">Автоматически обновлять прогноз погоды в роуминге. Это может увеличить ваши расходы по оплате счетов сотовой связи</string>
+    <string name="settings_update_roaming_summary">Обновлять прогноз погоды в роуминге. Это может увеличить ваши расходы по оплате счетов сотовой связи</string>
     <string name="settings_category_appearance">Внешний вид</string>
     <string name="settings_category_appearance_sum">Единицы измерения, цвет текста и т.д.</string>
     <string name="settings_category_miui">Прошивки MIUI</string>
     <string name="settings_category_miui_sum">Настройки для прошивок MIUI, очистка погодных данных MIUI</string>
     <string name="settings_miui_support_summary">Включает поддержку встроенных виджетов MIUI</string>
     <string name="settings_miui_support_title">Виджеты MIUI</string>
-	<string name="settings_miui_v5_summary">Включите, если у вас прошивка MIUI v5</string>
+	<string name="settings_miui_v5_summary">Включите, если у вас MIUI v5</string>
     <string name="settings_miui_v5_title">Прошивка MIUI v5</string>    
     <string name="clear_miui_data">Очистка базы MIUI</string>
-    <string name="clear_miui_data_summary">Очищает базу данных WeatherProvider MIUI</string>
+    <string name="clear_miui_data_summary">Очищает базу данных WeatherProvider</string>
     <string name="clear_miui_data_dialog">Очистка базы MIUI</string>
     <string name="clear_miui_data_dialog_text">Очистка базы данных погоды MIUI завершена!</string>
     <string name="settings_time_format_12h">12-часовой формат</string>
