--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="donations_button_close">Close</string> 
+  	<string name="donations_flattr">Flattr</string> 
+ 	<string name="donations_description">Do you find this application useful?\nSupport it\'s development by flattring it or sending donations to the developer!</string> 
+  	<string name="donations_flattr_description">Flattr takes 10 % as a monthly fee!</string> 
+  	<string name="donations_google_android_market">Google Play Store</string> 
+  	<string name="donations_google_android_market_not_supported_title">In-App Donations are not supported</string> 
+  	<string name="donations_google_android_market_not_supported">In-App Donations are not supported. Is Google Play Store installed correctly?</string> 
+  	<string name="donations_google_android_market_description">Google takes 30 % off every donation!</string> 
+  	<string name="donations_google_android_market_donate_button">Donate!</string> 
+  	<string name="donations_google_android_market_text">How much?</string> 
+  	<string name="donations_paypal">PayPal</string> 
+  	<string name="donations_paypal_description">You can choose how much you want to donate after clicking the button!</string> 
+  	<string name="donations_thanks_dialog_title">Thanks!</string> 
+  	<string name="donations_thanks_dialog">Thanks for donating!\nI really appreciate this!</string>    
     <string name="app_name">Weather BZ</string>
     <string name="changelog">Changelog</string>
     <string name="close">Close</string>
