--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -1,27 +1,16 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="donations_button_close">Luk</string> 
-  <string name="donations_flattr">Flattr</string> 
-  <string name="donations_description">Vil du finde dette program nyttigt?\nSupport den udvikling ved at flattring det eller sende donationer til udvikleren!</string> 
-  <string name="donations_flattr_description">Flattr tager 10% i månedlig gebyr!</string> 
-  <string name="donations_google_android_market">Google Play Store</string> 
-  <string name="donations_google_android_market_not_supported_title">In-App donationer er ikke supporteret</string> 
-  <string name="donations_google_android_market_not_supported">In-App donationer er ikke supporteret. Er Google Play Store installeret korrekt?</string> 
-  <string name="donations_google_android_market_description">Google tager 30% fra hver donation!</string> 
-  <string name="donations_google_android_market_donate_button">Donér!</string> 
-  <string name="donations_google_android_market_text">Hvor meget?</string> 
-  <string name="donations_paypal">PayPal</string> 
-  <string name="donations_paypal_description">Du kan vælge hvor meget du vil donere efter du har trykket på knappen</string> 
-  <string name="donations_thanks_dialog_title">Tak!</string> 
-  <string name="donations_thanks_dialog">Tak fordi du donerede!\nJeg sætter virkelig pris på dette!</string> 
   <string name="about_author">Forfatter</string>
+  <string name="about_blizzard">Snestorm</string>
   <string name="about_cloudy">Skyet</string>
   <string name="about_cloudy_night">Skyet Aften</string>
   <string name="about_copyright">Ophavsret</string>
   <string name="about_dust">Støv</string>
   <string name="about_fog">Tåge</string>
   <string name="about_hailstone">Hagl</string>
+  <string name="about_heavy_snow">Sne</string>
   <string name="about_light_rain">Let regn</string>
+  <string name="about_light_snow">Let sne</string>
   <string name="about_overcast">Overskyet</string>
   <string name="about_provider">Vejrudbyder</string>
   <string name="about_rain">Regn</string>
@@ -54,6 +43,20 @@
   <string name="dlg_select_action">Vælg en handling</string>
   <string name="dlg_set_as_home">Indstil som \"Hjemby\"</string>
   <string name="donate">Doner</string>
+  <string name="donations_button_close">Luk</string>
+  <string name="donations_description">Vil du finde dette program nyttigt?\nSupport den udvikling ved at flattring det eller sende donationer til udvikleren!</string>
+  <string name="donations_flattr">Flattr</string>
+  <string name="donations_flattr_description">Flattr tager 10% i månedlig gebyr!</string>
+  <string name="donations_google_android_market">Google Play Store</string>
+  <string name="donations_google_android_market_description">Google tager 30% fra hver donation!</string>
+  <string name="donations_google_android_market_donate_button">Donér!</string>
+  <string name="donations_google_android_market_not_supported">In-App donationer er ikke supporteret. Er Google Play Store installeret korrekt?</string>
+  <string name="donations_google_android_market_not_supported_title">In-App donationer er ikke supporteret</string>
+  <string name="donations_google_android_market_text">Hvor meget?</string>
+  <string name="donations_paypal">PayPal</string>
+  <string name="donations_paypal_description">Du kan vælge hvor meget du vil donere efter du har trykket på knappen</string>
+  <string name="donations_thanks_dialog">Tak fordi du donerede!\nJeg sætter virkelig pris på dette!</string>
+  <string name="donations_thanks_dialog_title">Tak!</string>
   <string name="download_video">Download video</string>
   <string name="end_time_title">Slutningen</string>
   <string name="fetching_location">Lokaliserer …</string>
@@ -115,6 +118,7 @@
   <string name="settings_show_info_title">Vis info</string>
   <string name="settings_show_weather_icons_summary">Vis vejr ikoner (istedet for tekstet vejrudsigt) i 3-dags vejrudsigt</string>
   <string name="settings_show_weather_icons_title">Vis vejr ikoner</string>
+  <string name="settings_time_format_12h">12 timers format</string>
   <string name="settings_update_autoupdate_summary">Auto opdater vejrudsigt</string>
   <string name="settings_update_autoupdate_title">Auto opdater</string>
   <string name="settings_update_interval_title">Opdateringsinterval</string>
@@ -152,7 +156,7 @@
   <string name="temperature_units_c">Celsius</string>
   <string name="temperature_units_f">Fahrenheit</string>
   <string name="text_color_title">Tekstfarve</string>
-  <string name="updating">Opdaterer…</string>
+  <string name="updating">Opdaterer\u2026</string>
   <string name="visibility_units">Sigtbarhed enhed</string>
   <string name="visibility_units_m">" m"</string>
   <string name="visibility_units_mi">" mil"</string>
