--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -190,6 +190,7 @@
     <string name="wind_speed_units_mph">" миль/ч"</string> 
     <string name="visibility_units">Единицы видимости</string>
     <string name="visibility_units_m">" м"</string>
+    <string name="visibility_units_km">" км"</string>
     <string name="visibility_units_mi">" миль"</string>  
     <string name="temperature_units">Единицы температуры</string>
     <string name="temperature_units_c">Цельсий</string>
